--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,12 @@ version: "3.9"
 services:
   backend:
     container_name: backend
-    image: ghcr.io/taletalesarb/simple-web-app-with-login:latest
+    # image: ghcr.io/taletalesarb/simple-web-app-with-login:latest
+    #dev
+    build: .
+    volumes:
+      - .:/user/app/
+    #end-dev
     command:
       ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "5000", "--reload"]
     ports:
