--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,18 +2,23 @@ version: "3.9"
 services:
   backend:
     container_name: backend
-    # image: ghcr.io/taletalesarb/simple-web-app-with-login:latest
-    #dev
-    build: .
-    volumes:
-      - .:/user/app/
-    #end-dev
+    image: ghcr.io/taletalesarb/simple-app-with-login:latest
+    # #dev
+    # build: .
+    # volumes:
+    #   - .:/user/app/
+    # #end-dev
     command:
       ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "5000", "--reload"]
     ports:
       - "5000:5000"
     networks:
       - test-network
+    deploy:
+      resources:
+        limits:
+          cpus: '0.1'
+          memory: 50M
 
 networks:
   test-network:
